# karaoke-app

./: .gitignore  CMakeLists.txt  README.md  main.cpp
