CMAKE_MINIMUM_REQUIRED(VERSION 3.7)
PROJECT(karaoke)

SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_BUILD_TYPE DEBUG)

set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLEW REQUIRED)
FIND_PACKAGE(glm REQUIRED)
FIND_PACKAGE(GLUT REQUIRED)

find_library(SOIL2 soil2-debug)

include_directories(${GLEW_INCLUDE_DIRS})
include_directories(${GLM_INCLUDE_DIRS})
include_directories(${GLUT_INCLUDE_DIRS})

SET(SOURCE_FILES main.cpp)
ADD_EXECUTABLE(karaoke ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(karaoke glfw)
TARGET_LINK_LIBRARIES(karaoke OpenGL::GL GLEW::GLEW glm SOIL)
TARGET_LINK_LIBRARIES(karaoke ${GLUT_LIBRARIES} ${OPENGL_glu_LIBRARY})